funcionalidade clearScreen refatorada para limpar também o prompt do windows